--- a/stylesheets/scss/_tabs.scss
+++ b/stylesheets/scss/_tabs.scss
@@ -99,7 +99,9 @@ body{
         display: block;
         background-color: #ffd700;
         border: 1px solid black;
-        padding: 20px; }
+        padding: 20px; 
+        margin: 0px;
+      }
       &[data-ur-set="tabs"][data-ur-tab-id="html"] {
         text-align: left; } }
     #tab_widget *[data-ur-set="tabs"] * {
