geocode/button.html

--- a/_layouts/geocode-widget-sub.html
+++ b/_layouts/geocode-widget-sub.html
@@ -16,7 +16,7 @@
         <ul>
           <li><a href="/widgets/carousel.html">Carousel</a></li>
           <li><a href="/widgets/input_clear.html">Input Clear</a></li>
-          <li><a href="/widgets/geocode.html">Reverse Geocode</a></li>
+          <li><a href="/widgets/geocode.html">Geolocation</a></li>
           <li><a href="/widgets/tabs.html">Tabs</a></li>
           <li><a href="/widgets/toggler.html">Toggler</a></li>
           <li><a href="/widgets/zoom.html">Zoom</a></li>
@@ -32,16 +32,11 @@
     
     <div class="wrapper">
       <p>
-      <a href="{{site.url}}../../widgets/geocode.html">Back to Geolocation Widget</a>
+      <a href="{{site.url}}../../widgets/geocode.html"> < Back to Geolocation Widget</a>
       </p>
     </div>
     
     </div>
-    <div id="bottombody">
-      <div class="wrapper" id="bottomwrap">
-          <a href="http://site.moovweb.com/"><div id="moovweblogo"></div></a>
-          Uranium &copy; 2012 | <a href="https://github.com/moovweb/uranium">GitHub</a> | <a href="mailto:uranium@moovweb.com">Contact</a>
-      </div><!-- wrapper-->
-    </div><!-- bottombody end-->
+    {% include footer.html %}
   </body>
 </html>
