--- a/stylesheets/scss/_geocode.scss
+++ b/stylesheets/scss/_geocode.scss
@@ -29,3 +29,9 @@ body#geocode_page {
     width: 62px !important;
     // on iphone without the important, it doesn't work!!
     height: 62px; } }
+
+body#geocode_text_inputs_page, body#geocode_button_page{
+  button[value=clickMe]{
+    margin-bottom: 10px;
+  }
+}
