--- a/stylesheets/scss/main.scss
+++ b/stylesheets/scss/main.scss
@@ -14,7 +14,7 @@
 @import "tutorial";
 @import "demonstration";
 @import "download";
-@import "more";
+@import "about";
 @import "styling";
 
 @import "widget_list";
